# wsinfer-zoo

./: .gitattributes  README.md  _version.py  setup.cfg  setup.py  wsinfer-zoo-registry.json
.github/workflows/: build-binary.yaml  ci.yml
wsinfer_zoo/: __init__.py  __main__.py  _version.py  cli.py  client.py
wsinfer_zoo/schemas/: model-config.schema.json  wsinfer-zoo-registry.schema.json
