[metadata]
name = wsinfer_zoo
url = https://github.com/SBU-BMI/wsinfer-zoo
author = Jakub Kaczmarzyk
author_email = jakub.kaczmarzyk@stonybrookmedicine.edu
description = A client for model zoo for WSInfer-compatible models. 
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    click>=8.0,<9
    huggingface_hub

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest

[options.entry_points]
console_scripts =
    wsinfer_zoo = wsinfer_zoo.cli:cli

# [options.package_data]
# wsinfer_zoo =
#     models.json

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = wsinfer_zoo/_version.py

[mypy]
[mypy-h5py]
ignore_missing_imports = True
[mypy-large_image]
ignore_missing_imports = True
[mypy-cv2]
ignore_missing_imports = True
[mypy-geojson]
ignore_missing_imports = True
[mypy-torchvision.*]
ignore_missing_imports = True
[mypy-openslide]
ignore_missing_imports = True
[mypy-pandas]
ignore_missing_imports = True
[mypy-timm.*]
ignore_missing_imports = True
[mypy-scipy.stats]
ignore_missing_imports = True
[mypy-shapely.*]
ignore_missing_imports = True


[versioneer]
VCS = git
style = pep440
versionfile_source = wsinfer_zoo/_version.py
versionfile_build = wsinfer_zoo/_version.py
tag_prefix = v
parentdir_prefix = wsinfer_zoo-

